增加一个喵喵文件

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,5 +11,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="welcome to Love Coding!" />
+        android:text="这儿是 Love coding 的主页面" />
 </RelativeLayout>
