--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#81bcec</color>
+    <color name="colorPrimaryDark">#68a3f1</color>
+    <color name="colorAccent">#40b9ff</color>
+    <color name="white">#ffffff</color>
+    <color name="hui">#eaeaea</color>
+    <color name="card_Text_bg">#daf3f8</color>
+    <color name="card_bg">#b6d6fb</color>
 </resources>
