--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/hui"
+    android:background="@mipmap/card_bg_taohua"
     android:orientation="vertical"
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
