--- a/app/src/main/res/layout/layout_main_list.xml
+++ b/app/src/main/res/layout/layout_main_list.xml
@@ -6,11 +6,17 @@
     <TextView
         android:textSize="18sp"
         android:id="@+id/list_item"
+        android:textColor="@color/cardview_dark_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_margin="3dp"
         android:padding="4dp"
         android:text="@string/app_name" />
+    <ImageView
+        android:layout_below="@+id/list_item"
+        android:src="@color/cardview_dark_background"
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
 
 </RelativeLayout>
